libide: Fix non-literal format string warnings for clang

This commit also makes the function static, as it should be.

https://bugzilla.gnome.org/show_bug.cgi?id=766761